Cloth: Unable to set simulation end frame for multiple objects at once #74515

Closed
opened 2020-03-07 03:14:02 +01:00 by Dustin Bowser · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.13586 Core Profile Context 19.12.2 26.20.15002.61

Blender Version
Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-08 20:31, hash: bc6bbe5fac

Short description of error
Alt + drag on simulation end property of cache changes value only for 1 object

Exact steps for others to reproduce the error

  • Add 2 palnes
  • Enable physics for both planes
  • select both planes
  • try to set simulation end frame for both objects
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Radeon RX550/550 Series ATI Technologies Inc. 4.5.13586 Core Profile Context 19.12.2 26.20.15002.61 **Blender Version** Broken: version: 2.83 (sub 6), branch: master, commit date: 2020-03-08 20:31, hash: `bc6bbe5fac` **Short description of error** Alt + drag on simulation end property of cache changes value only for 1 object **Exact steps for others to reproduce the error** - Add 2 palnes - Enable physics for both planes - select both planes - try to set simulation end frame for both objects
Author

Added subscriber: @bowserlm

Added subscriber: @bowserlm
Richard Antalik changed title from Linking Modifiers for Cloth Simulation doesn't include Cache settings. to Cloth: Unable to set simulation end frame for multiple objects at once 2020-03-09 12:01:27 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author

Also discovered that duplicating an object with cloth settings will not maintain the cache settings by set them back to default.

Also discovered that duplicating an object with cloth settings will not maintain the cache settings by set them back to default.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

This has been reported before, see #64573 (RNA_path_from_ID_to_property fails for pointcaches [thus ALT+click does as well...]), will merge these reports...

This has been reported before, see #64573 (RNA_path_from_ID_to_property fails for pointcaches [thus ALT+click does as well...]), will merge these reports...
Member

Closed as duplicate of #64573

Closed as duplicate of #64573
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#74515
No description provided.