Cloth: Copy point cache settings when copying cloth modifier

This fixes the issue mentioned in the comment in T74515.

Reviewers: mont29

Differential Revision: https://developer.blender.org/D7104